// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@body, @param and @query 1`] = `
Array [
  Object {
    "index": 2,
    "paramType": [Function],
    "scope": undefined,
  },
]
`;

exports[`@body, @param and @query 2`] = `
Array [
  Object {
    "index": 0,
    "name": "param1",
  },
]
`;

exports[`@body, @param and @query 3`] = `
Array [
  Object {
    "index": 1,
    "name": "query1",
  },
]
`;
